deploy/web/k8s-yaml/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-web-svc
  namespace: default
spec:
  selector:
    app: k8s-web
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
