deploy/web/k8s-yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-web-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: web.racer.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-web-svc
                port:
                  number: 80
